# kodi-myanimelist-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  addon.py  hatch_build.py  pyproject.toml
myanimelist_scraper/: main.py
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
src/: addon.py
src/kodi_addon/: __init__.py  _router.py  protocols.py
src/kodi_anidb_scraper_tv/: __init__.py  _anidb.py  _anidburl.py  _animetitles.py  _main.py  _util.py
src/metadata_myanimelist_tv/: __init__.py  _anime_news_network.py  _main.py  _myanimelist.py  _router.py  _scraper.py  _settings.py  addon.py  myanimelist.py  protocol.py  router.py
test/: test_anidb_client.py  test_anidb_parsing.py  test_myanimelist_client.py  test_myanimelist_parsing.py
