[project]
name = "metadata.myanimelist.tv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper>=1.2.71",
    "pillow>=11.2.1",
]
authors = [
    {name="Archimedes Trajano"}
    ]
license = "EPL-2.0"
[tool.uv]
package=true

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "kodistubs>=21.0.0",
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]


[build-system]
requires    = ["hatchling", "hatch-zipped-directory"]
#requires    = ["hatchling"]
build-backend = "hatchling.build"

# # [tool.hatch.build.targets.wheel]
# # packages = ["/src"]
[tool.hatch.build.targets.zipped-directory]
# Top-level folder name inside the ZIP
install-name = "metadata.myanimelist.tv"
# Include everything in the project root
sources      = ["/src", "/addon.xml"]
[tool.hatch.build.targets.zipped-directory.force-include]
"./addon.xml" = "./addon.xml"
[tool.hatch.build.hooks.custom]
