[project]
name = "metadata.myanimelist.tv"
version = "0.1.0"
description = "MyAnimeList TV Scraper"
readme = "README.md"
# https://kodi.wiki/view/Python_libraries
requires-python = ">=3.8,<3.9"
dependencies = ["cloudscraper>=1.2.71", "pillow"]
authors = [{ name = "Archimedes Trajano" }]
license = "EPL-2.0"
[tool.uv]
package = true

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "kodistubs>=21.0.0",
    "poethepoet",
    "pre-commit",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]


[build-system]
requires = ["hatchling", "hatch-zipped-directory", "strip-hints"]
#requires    = ["hatchling"]
build-backend = "hatchling.build"

# # [tool.hatch.build.targets.wheel]
# # packages = ["/src"]
[tool.hatch.build.targets.zipped-directory]
# Top-level folder name inside the ZIP
install-name = "metadata.myanimelist.tv"
# Include everything in the project root
#only-include=["src/"]
sources = ["src/"]
exclude=["uv.lock","hatch_build.py","pyproject.toml",".??*"]
artifacts =[
    "addon.xml"
]
[tool.hatch.build.hooks.custom]
